# lightBx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/shaders/: light.frag  light.frag.spv  light.vert  light.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
src/: main.cpp
src/core/: settings.h  vk_app.cpp  vk_app.h  vk_engine.cpp  vk_engine.h  vk_init.cpp  vk_init.h  vk_io.cpp  vk_io.h  vk_log.h  vk_mesh.cpp  vk_mesh.h  vk_texture.cpp  vk_texture.h  vk_types.h  vk_util.cpp  vk_util.h
src/io/: vk_io.cpp  vk_io.h
src/math/: matrix.cpp  matrix.h  vec.cpp  vec.h
src/primitives/: camera.cpp  camera.h  mesh.cpp  mesh.h  shapes.cpp  shapes.h
